homework/5.kubernetes-network/postgres-deploymet.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xeon-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xeon-postgres
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xeon-postgres
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
