homework/5.kubernetes-network/redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xeon-redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xeon-redmine
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xeon-redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
          - containerPort: 3000
